--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -13,53 +13,56 @@
 .projects-div {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
   height: 512px;
+}
+
+.projects-div a {
+  align-items: flex-end;
+  display: flex;
+  justify-content: flex-start;
+  aspect-ratio: 16 / 9;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  box-shadow: 0 0 4px var(--black);
+  color: var(--white);
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+
+.projects-div a:hover {
+  box-shadow: 0 0 2px var(--main-color);
+  color: var(--main-color);
+  /* text-decoration: underline; */
+  /* text-underline-offset: 8px; */
+}
+
+.project-name {
+  box-shadow: 0 0 2px var(--black);
+  background: #151515;
+  padding: 0.2rem 0.4rem;
 }
 
 .navbar-pics {
   box-shadow: 0 0 4px var(--black);
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
   overflow-y: scroll;
   padding: 0.5rem;
   width: 25%;
 }
 
 .navbar-pics button {
-  background: none;
+  aspect-ratio: 16 / 9;
+  background-repeat: no-repeat;
+  background-size: contain;
   border: none;
+  width: 100%;
 }
 
-.pic:hover {
+.navbar-pics button:hover {
   box-shadow: 0 0 2px var(--main-color);
   cursor: pointer;
-}
-
-.project-picture {
-  align-items: center;
-  color: var(--white);
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2rem;
-  justify-content: space-between;
-  letter-spacing: 1px;
-  text-decoration: none;
-  width: 70%;
-}
-
-.project-picture:hover {
-  color: var(--main-color);
-  text-decoration: underline;
-  text-underline-offset: 8px;
-}
-
-.illustration {
-  box-shadow: 0 0 4px var(--black);
-}
-
-.illustration:hover {
-  box-shadow: 0 0 2px var(--main-color);
 }
 
 
@@ -74,17 +77,17 @@
   }
 
   .navbar-pics {
-    flex-wrap: wrap;
+    display: flex;
     overflow-y: hidden;
     padding: 0;
     width: 100%;
   }
 
-  .projects-div {
-    height: 625px;
-  }
-
   .navbar-pics::-webkit-scrollbar {
     height: 4px;
+  }
+
+  .navbar-pics a {
+    aspect-ratio: 0.64;
   }
 }
